test_files/netlist_format/valid/valid_02.net
V1 N001 0 12
R1 out N001 1k
R2 out 0 1k
.tf V(out) V1
* DC transfer function analysis
.backanno
.end
