test_files/netlist_format/invalid/invalid_05_line_5.net
V1 N001 0 12
R1 out N001 1k
R2 out 0 1k
.tf V(out) V1
.stepPARAM A 1m 200m 1m
.backanno
.end
